--- a/examples/cluster/Akkatecture.Examples.Seed/Akkatecture.Examples.Seed.csproj
+++ b/examples/cluster/Akkatecture.Examples.Seed/Akkatecture.Examples.Seed.csproj
@@ -29,4 +29,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Akka.Cluster.Hosting" Version="0.3.4" />
+  </ItemGroup>
+
 </Project>
