--- a/examples/cluster/Akkatecture.Examples.Worker/Akkatecture.Examples.Worker.csproj
+++ b/examples/cluster/Akkatecture.Examples.Worker/Akkatecture.Examples.Worker.csproj
@@ -30,4 +30,10 @@
     </None>
   </ItemGroup>
   
+  <ItemGroup>
+    <PackageReference Include="Akka.Cluster.Hosting" Version="0.3.4" />
+    <PackageReference Include="Petabridge.Cmd.Cluster" Version="1.1.0" />
+    <PackageReference Include="Petabridge.Cmd.Cluster.Sharding" Version="1.1.0" />
+  </ItemGroup>
+  
 </Project>
